# shrs_presence

./: Cargo.toml  justfile
examples/: basic.rs
shrs_presence/: Cargo.toml
shrs_presence/src/: lib.rs
shrs_presence_server/: Cargo.toml
shrs_presence_server/src/: main.rs  state.rs
src/: builtin.rs  lib.rs  state.rs
