[workspace]
members = [
    "shrs_presence_server",
    "shrs_presence"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
authors = ["nithinmuthukumar"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
edition = "2021"
keywords = ["shrs", "shell", "posix", "unix"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nithinmuthukumar/shrs_presence.git"


