
[package]
name = "shrs_presence"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true




[dependencies]
clap = "4.4.14"
reqwest = {version = "0.12.2",features = ["blocking", "json"]}
serde_json = "1.0.115"
shrs = {git="https://github.com/MrPicklePinosaur/shrs.git"}
uuid = {version = "1.8.0", features = ["v4" ]}
tokio = { version = "1.36.0", features = ["full"] }
dirs = "5"
