[package]
name = "shrs_presence_server"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
discord-rich-presence = "0.2.3"
tokio = { version = "1.36.0", features = ["full"] }
